--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.google.firebase.udacity.friendlychat">
 
     <application
@@ -16,6 +17,11 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="c1215dbfa5b81094f0a24b2f1e320872d53f4b1c"
+            tools:replace="android:value"/>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
